@@ -1,3 +1,10 @@
+2014-05-13 Pierangelo Masarati <masarati@aero.polimi.it>
+
+	* base/sched/{GNUmakefile.am,sched.c}: use MODULE_ALIAS()
+	  instead of manual symlinks for legacy schedulers,
+	  thanks to Lukas Anzinger <lukas@lukasanzinger.at>
+	* base/sched/GNUmakefile.in: regenerate
+
 2014-05-06 Pierangelo Masarati <masarati@aero.polimi.it>
 
 	* configure.in: fix linux source dir extraction when further args
